# alidade

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.github/workflows/: frontend.yml  python.yml  release-please-lockfiles.yml  release-please.yml  release.yml  rust.yml  testpypi.yml  update-lockfiles.yml
app/: .gitignore  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
app/src/: App.tsx  main.tsx
crates/alidade/: Cargo.toml
crates/alidade-core/: Cargo.toml
crates/alidade-core/src/: lib.rs
crates/alidade-protocol/: Cargo.toml
crates/alidade-protocol/src/: lib.rs
crates/alidade/src/: lib.rs  main.rs
docs/: PLAN.md
docs/notes/: README.md  frontend-stack.md  release-plan.md  rust-workspace.md
npm/alidade/: README.md  package.json
python/: .gitignore  LICENSE.md  README.md  pyproject.toml
python/src/alidade/: __init__.py
python/tests/: test_smoke.py
scripts/: bump-version.sh
