[package]
name = "alidade-protocol"
description = "Wire protocol types for alidade — the source of truth for the cross-language contract."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
